--- a/track-a-cohort/CH/WR_figures_working.Rmd
+++ b/track-a-cohort/CH/WR_figures_working.Rmd
@@ -30,6 +30,7 @@ library(plotly) #for interactive plots
 library(ggrepel) #for ggplot labels
 library(xts) #NB code to import STARs data
 library(patchwork) #for combining plots
+library(data.table)
 ```
 
 
